<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:text="@string/add_variable"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_basic_salary"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_basic_salary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_basic_salary"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fix_allowed"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_fix_allowed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_fix_allowed"
                android:inputType="numberDecimal"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_Layout_Transport"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_transport_var"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_transport_var"
                android:inputType="numberDecimal"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_Layout_Meal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_meal_var"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_meal_var"
                android:inputType="numberDecimal"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutHealthBenefit"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_health_benefit_var"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_healt_benefit_var"
                android:inputType="numberDecimal"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_Layout_Travel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_travel_var"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_travel_var"
                android:inputType="numberDecimal"
                android:textSize="18dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>