<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/viewA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:text="@string/intruction"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_effectivework"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_effectivework"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:hint="@string/hint_effective_work"
                android:inputType="number"
                android:digits="0123456789"
                android:textSize="18dp"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_benefithealth"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_benefithealth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_benefit_health"
                android:inputType="number"
                android:digits="0123456789"
                android:textSize="18dp"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_travelcount"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_travelcount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_travel_count"
                android:inputType="number"
                android:digits="0123456789"
                android:textSize="18dp"
                android:maxLength="2"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4.0dp"
            android:paddingTop="5.0dp"
            android:paddingRight="4.0dp"
            android:paddingBottom="1dp"
            >

            <Button android:id="@+id/btn_checksalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_check_salary"
                android:background="@color/accent"
                app:layout_anchor="@id/viewA"
                app:layout_anchorGravity="bottom|end"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white"/>

            <Button android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear"
                android:background="@color/accent"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="fill_parent" >-->

<!--<RelativeLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_above="@+id/mLlayoutBottomButtons" >-->
<!--</RelativeLayout>-->

<!--<LinearLayout-->
    <!--android:id="@+id/mLlayoutBottomButtons"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:orientation="vertical" >-->

    <!--<Button-->
        <!--android:id="@+id/button1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Button1" />-->

    <!--<Button-->
        <!--android:id="@+id/button2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Button2" />-->
<!--</LinearLayout>-->

<!--</RelativeLayout>-->